Bug 1136969 - Add a check that OnStartRequest is called just once during the lifetime of a channel. r=mcmanus

--HG--
extra : rebase_source : 756ae3c377788dfe9cf4b073fddc8d99f6021b77